Fix spacing on btn in callout and comment on style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,17 @@ body {
     margin-bottom: 30px;
 }
 
+/**
+.opaque-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+**/
+
 /**** video container ****/
 
 .video-container {
